# vigilant-enigma1

./: .env.example  .gitignore  DOWNLOAD.md  INSTALLATION.md  LICENSE  MANIFEST.in  PROJECT_COMPLETE.md  README.md  SUMMARY.md  VERIFICATION.md  build.py  demo.py  main.py  pyproject.toml  requirements.txt  run.py  setup.py
data/: input.csv
scripts/: setup_unix.sh  setup_win.ps1
src/: __init__.py  cli.py  scraper.py
src/igscraper/: __init__.py  cli.py  parser.py  rate_limiter.py
src/vigilant_enigma1/: __init__.py  cli.py  config.py  logger.py  parser.py  playwright_login.py  ratelimiter.py  scraper.py
tests/: __init__.py  test_parser.py  test_rate_limiter.py  test_scraper.py
